--- a/p/pl/ple/ple.com.au.html
+++ b/p/pl/ple/ple.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ple.com.au privacy policy that was archived on 2008-10-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081004041856id_/http%3A//www.ple.com.au%3Fp%3Dprivacy%26s%3Dlr8un3dsdcm2fb467t4a22pcs0) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ple.com.au privacy policy that was archived on 2009-09-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090929230917id_/http%3A//www.ple.com.au%3Fp%3Dprivacy%26s%3Dh7chs9o4i1pa9gnuoqev93onu0) for the most accurate reproduction.-->
 
 <html><head>
 <title>PLE Computers Perth, Online Shopping, Computers, Notebooks, Hardware, Service and Repairs</title>
@@ -33,12 +33,16 @@ td { behavior: url(img/iepngfix.htc) }
     <td height="19" colspan="2" class="PLESTANDARD">&nbsp;</td>
     <td colspan="8"> 
       <div align="right" class="PLESTANDARD"><font color="#FFFFFF" background="img/back6.jpg">
-        <b>45</b> Customers Online
+        <b>28</b> Customers Online
     </font></div></td>
   </tr>
   <tr> 
     <td height="116" colspan="2" align="left" bgcolor="#FFFFFF"><img src="/img/plelogotop.jpg" alt="DDR2, memory, USB, keyboard, mouse, microsoft, bentley, wangara, intel, pentium, amd, billion, logitech, western digital, xfx, d-link, samsung, asus, acer, Computers, Computer Perth, Computer Hardware Perth, New Computers Perth, computer store, service, New PCs, Computer Upgrades, PC Perth, Computer Packages Perth, Computer Upgrade, Computer Repairs Perth, PC Packages, PC Repairs Perth, Cheap, bargain, Laptop Computer, Laptop Computers, Notebook Computer, Notebook, computars, computors, online shopping" width="198" height="116"></td>
-    <td width="579" height="116" colspan="6" valign="middle" background="/img/middlehead.jpg" bgcolor="#CC0000" class="PLESTANDARD" td=""></td>
+    <td width="579" height="116" colspan="6" valign="middle" background="/img/middlehead.jpg" bgcolor="#CC0000" class="PLESTANDARD" td="">
+      <div align="right" class="text_sidebar">
+        <p>&nbsp;</p>
+      </div>
+    </td>
     <td width="201" height="116" colspan="2" valign="middle" background="/img/endhead.jpg" bgcolor="#CC0000" class="PLESTANDARD" td="">&nbsp;</td>
   </tr>
     <tr><td width="99" height="19" align="center" background="/img/buttonstylefirst.jpg"> 
@@ -54,7 +58,7 @@ td { behavior: url(img/iepngfix.htc) }
       </td><td width="99" height="19" align="center" background="/img/buttonstyle1.jpg" class="b"><a href="?p=partners" class="b">PARTNERS</a>
       </td><td width="84" height="19" align="left" valign="top" background="/img/buttonstyle1fill.jpg" bgcolor="#670004">&nbsp;</td>
     <td width="100" height="19" align="center" valign="middle" background="/img/buttonstyle1fill2.jpg" bgcolor="#670004"></td>
-    <td width="101" height="19" align="center" valign="middle" background="/img/buttonstyle1end.jpg" bgcolor="#670004">&nbsp;</td>
+    <td width="101" height="19" align="center" valign="middle" background="/img/buttonstyle1end.jpg" bgcolor="#670004" class="b"><a href="?p=faq" class="b"></a></td>
   </tr>
  <tr>
  <td height="20" colspan="19" class="PLESTANDARD_RED">&nbsp;</td>
@@ -80,7 +84,7 @@ td { behavior: url(img/iepngfix.htc) }
                   <td height="69" colspan="3" bordercolor="#cc0000" bgcolor="#FFFFFF"><div align="center"><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><img src="img/magicon.gif" alt="computers perth, computer repairs" width="14" height="12"> <a href="?p=basket&amp;f=view" class="PLESTANDARD">VIEW </a></font> <br>
                           <br>
                                               TOTAL - $
-                    1003.00                    <br>
+                    658.00                    <br>
                     <br>
                     <img src="img/shopping-cart.gif" alt="perth computer, computers" width="14" height="12"> <a href="?p=checkout" class="PLESTANDARD">CHECKOUT<br>
                     <br>
@@ -92,7 +96,7 @@ td { behavior: url(img/iepngfix.htc) }
             </p></form>
             </div>
           <div class="div_sidebar">
-            <a href="?p=products&amp;category_id=1" class="text_sidebar">ACCESSORIES</a><br><a href="?p=products&amp;category_id=21" class="text_sidebar">CABLES</a><br><a href="?p=products&amp;category_id=11" class="text_sidebar">CAMERAS</a><br><a href="?p=products&amp;category_id=291" class="text_sidebar">CAPTURE CARDS</a><br><a href="?p=products&amp;category_id=301" class="text_sidebar">CASES</a><br><a href="?p=products&amp;category_id=231" class="text_sidebar">CD/DVD DRIVES</a><br><a href="?p=products&amp;category_id=111" class="text_sidebar">CONTROLLER CARDS</a><br><a href="?p=products&amp;category_id=31" class="text_sidebar">CPU</a><br><a href="?p=products&amp;category_id=41" class="text_sidebar">FLOPPY DRIVE</a><br><a href="?p=products&amp;category_id=81" class="text_sidebar">GAMING DEVICES</a><br><a href="?p=products&amp;category_id=311" class="text_sidebar">GIFT VOUCHER</a><br><a href="?p=products&amp;category_id=51" class="text_sidebar">HARD-DRIVE</a><br><a href="?p=products&amp;category_id=61" class="text_sidebar">HEATSINKS &amp; FANS</a><br><a href="?p=products&amp;category_id=381" class="text_sidebar">HOME SECURITY</a><br><a href="?p=products&amp;category_id=71" class="text_sidebar">INK / TONERS</a><br><a href="?p=products&amp;category_id=91" class="text_sidebar">KEYBOARDS</a><br><a href="?p=products&amp;category_id=131" class="text_sidebar">MEDIA</a><br><a href="?p=products&amp;category_id=141" class="text_sidebar">MEMORY</a><br><a href="?p=products&amp;category_id=171" class="text_sidebar">MICE</a><br><a href="?p=products&amp;category_id=151" class="text_sidebar">MICROPHONES</a><br><a href="?p=products&amp;category_id=121" class="text_sidebar">MODEMS &amp; ROUTERS</a><br><a href="?p=products&amp;category_id=161" class="text_sidebar">MONITOR</a><br><a href="?p=products&amp;category_id=101" class="text_sidebar">MOTHERBOARDS</a><br><a href="?p=products&amp;category_id=321" class="text_sidebar">MP3</a><br><a href="?p=products&amp;category_id=361" class="text_sidebar">NETWORK STORAGE</a><br><a href="?p=products&amp;category_id=181" class="text_sidebar">NETWORKING</a><br><a href="?p=products&amp;category_id=371" class="text_sidebar">NOTEBOOKS</a><br><a href="?p=products&amp;category_id=191" class="text_sidebar">PAPER</a><br><a href="?p=products&amp;category_id=211" class="text_sidebar">POWER PROTECTION</a><br><a href="?p=products&amp;category_id=221" class="text_sidebar">POWER SUPPLIES</a><br><a href="?p=products&amp;category_id=341" class="text_sidebar">PRE BUILT COMPUTERS</a><br><a href="?p=products&amp;category_id=201" class="text_sidebar">PRINTERS</a><br><a href="?p=products&amp;category_id=351" class="text_sidebar">REMOTE CONTROL</a><br><a href="?p=products&amp;category_id=241" class="text_sidebar">SCANNERS</a><br><a href="?p=products&amp;category_id=261" class="text_sidebar">SOFTWARE</a><br><a href="?p=products&amp;category_id=251" class="text_sidebar">SOUND CARDS</a><br><a href="?p=products&amp;category_id=271" class="text_sidebar">SPEAKERS</a><br><a href="?p=products&amp;category_id=281" class="text_sidebar">VIDEO CARDS</a><br>            <br>
+            <a href="?p=products&amp;category_id=1" class="text_sidebar">ACCESSORIES</a><br><a href="?p=products&amp;category_id=431" class="text_sidebar">BAREBONES</a><br><a href="?p=products&amp;category_id=21" class="text_sidebar">CABLES</a><br><a href="?p=products&amp;category_id=11" class="text_sidebar">CAMERAS</a><br><a href="?p=products&amp;category_id=291" class="text_sidebar">CAPTURE CARDS</a><br><a href="?p=products&amp;category_id=301" class="text_sidebar">CASES</a><br><a href="?p=products&amp;category_id=231" class="text_sidebar">CD/DVD DRIVES</a><br><a href="?p=products&amp;category_id=111" class="text_sidebar">CONTROLLER CARDS</a><br><a href="?p=products&amp;category_id=31" class="text_sidebar">CPU</a><br><a href="?p=products&amp;category_id=401" class="text_sidebar">EARPHONES</a><br><a href="?p=products&amp;category_id=41" class="text_sidebar">FLOPPY DRIVE</a><br><a href="?p=products&amp;category_id=81" class="text_sidebar">GAMING DEVICES</a><br><a href="?p=products&amp;category_id=311" class="text_sidebar">GIFT VOUCHER</a><br><a href="?p=products&amp;category_id=451" class="text_sidebar">GPS</a><br><a href="?p=products&amp;category_id=51" class="text_sidebar">HARD-DRIVE</a><br><a href="?p=products&amp;category_id=411" class="text_sidebar">HEADPHONES</a><br><a href="?p=products&amp;category_id=61" class="text_sidebar">HEATSINKS &amp; FANS</a><br><a href="?p=products&amp;category_id=381" class="text_sidebar">HOME SECURITY</a><br><a href="?p=products&amp;category_id=71" class="text_sidebar">INKS</a><br><a href="?p=products&amp;category_id=91" class="text_sidebar">KEYBOARDS</a><br><a href="?p=products&amp;category_id=131" class="text_sidebar">MEDIA</a><br><a href="?p=products&amp;category_id=321" class="text_sidebar">MEDIA PLAYERS</a><br><a href="?p=products&amp;category_id=141" class="text_sidebar">MEMORY</a><br><a href="?p=products&amp;category_id=171" class="text_sidebar">MICE</a><br><a href="?p=products&amp;category_id=151" class="text_sidebar">MICROPHONES</a><br><a href="?p=products&amp;category_id=121" class="text_sidebar">MODEMS &amp; ROUTERS</a><br><a href="?p=products&amp;category_id=161" class="text_sidebar">MONITOR</a><br><a href="?p=products&amp;category_id=101" class="text_sidebar">MOTHERBOARDS</a><br><a href="?p=products&amp;category_id=361" class="text_sidebar">NETWORK STORAGE</a><br><a href="?p=products&amp;category_id=181" class="text_sidebar">NETWORKING</a><br><a href="?p=products&amp;category_id=371" class="text_sidebar">NOTEBOOKS</a><br><a href="?p=products&amp;category_id=191" class="text_sidebar">PAPER</a><br><a href="?p=products&amp;category_id=211" class="text_sidebar">POWER PROTECTION</a><br><a href="?p=products&amp;category_id=221" class="text_sidebar">POWER SUPPLIES</a><br><a href="?p=products&amp;category_id=341" class="text_sidebar">PRE BUILT COMPUTERS</a><br><a href="?p=products&amp;category_id=201" class="text_sidebar">PRINTERS</a><br><a href="?p=products&amp;category_id=351" class="text_sidebar">REMOTE CONTROL</a><br><a href="?p=products&amp;category_id=241" class="text_sidebar">SCANNERS</a><br><a href="?p=products&amp;category_id=261" class="text_sidebar">SOFTWARE</a><br><a href="?p=products&amp;category_id=421" class="text_sidebar">SOLID STATE DRIVES</a><br><a href="?p=products&amp;category_id=251" class="text_sidebar">SOUND CARDS</a><br><a href="?p=products&amp;category_id=271" class="text_sidebar">SPEAKERS</a><br><a href="?p=products&amp;category_id=441" class="text_sidebar">TONERS</a><br><a href="?p=products&amp;category_id=281" class="text_sidebar">VIDEO CARDS</a><br>            <br>
             <a href="?p=products&amp;f=vc" class="text_sidebar">* CLEARANCE *</a><br>
             <a href="?p=products&amp;f=va" class="text_sidebar">* LIST ALL *</a></div>          </td>
         <td width="782" background="img/sidesmain.png" align="center" valign="top" bgcolor="#FFFFFF">
@@ -172,7 +176,7 @@ td { behavior: url(img/iepngfix.htc) }
 
 </td>
           </tr>
-        </tbody></table>          </td>
+        </tbody></table>         </td>
       </tr>
       <tr>
         <td height="4" background="img/sidebottom176.png"></td>
@@ -187,7 +191,7 @@ td { behavior: url(img/iepngfix.htc) }
   </tr>
   <tr> 
     <td height="25" colspan="2" valign="middle" background="/img/leftfoot.png" class="text_sidebar">&nbsp;</td>
-    <td width="579" height="25" colspan="6" align="center" valign="middle" background="/img/footermid.png" class="text_sidebar" td=""><a href="/?p=ttc" class="PLESTANDARDwhite">Terms And Conditions</a>|<font color="#FFFFFF"><a href="/?p=privacy" class="PLESTANDARDwhite">Privacy</a></font>|&nbsp; <font background="img/back6.jpg">© PLE Computers 1991 - 2008</font></td>
+    <td width="579" height="25" colspan="6" align="center" valign="middle" background="/img/footermid.png" class="text_sidebar" td=""><a href="/?p=ttc" class="PLESTANDARDwhite">Terms And Conditions</a>|<font color="#FFFFFF"><a href="/?p=privacy" class="PLESTANDARDwhite">Privacy</a></font>|&nbsp; <font background="img/back6.jpg">© PLE Computers 1991 - 2009</font></td>
     <td width="201" height="25" colspan="2" align="center" valign="middle" background="/img/rightfoot.png" class="text_sidebar" td=""> 
       <div align="center" class="PLESTANDARD2"><a href="mailto:webmaster@ple.com.au" class="PLESTANDARDwhite">Email 
         Webmaster </a></div>
