--- a/h/he/hee/heebmagazine.com.html
+++ b/h/he/hee/heebmagazine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the heebmagazine.com privacy policy that was archived on 2009-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090530070630id_/http%3A//www.heebmagazine.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the heebmagazine.com privacy policy that was archived on 2009-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090930105845id_/http%3A//www.heebmagazine.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
    	<title>Heeb: privacy policy</title>
@@ -65,7 +65,8 @@
 	</div>
 	<div class="clear"></div>
 	<div id="container">
-							<div id="content" class="norrow">
+				<div class="banner"><!--/* OpenX iFrame Tag v2.8.1 */-->  <!--/*   * This tag has been generated for use on a non-SSL page. If this tag   * is to be placed on an SSL page, change the   *   'http://d1.openx.org/...'   * to   *   'https://d1.openx.org/...'   *   * The backup image section of this tag has been generated for use on a   * non-SSL page. If this tag is to be placed on an SSL page, change the   *   'http://d1.openx.org/...'   * to   *   'https://d1.openx.org/...'   *   * If iFrames are not supported by the viewer's browser, then this   * tag only shows image banners. There is no width or height in these   * banners, so if you want these tags to allocate space for the ad   * before it shows, you will need to add this information to the <img>   * tag.   */-->  <iframe src="http://d1.openx.org/afr.php?zoneid=73714&amp;cb=INSERT_RANDOM_NUMBER_HERE" id="a3e52e7c" name="a3e52e7c" framespacing="0" frameborder="no" height="90" scrolling="no" width="728">&amp;amp;amp;amp;amp;amp;amp;lt;a href='http://d1.openx.org/ck.php?n=ad4a075e&amp;amp;amp;amp;amp;amp;amp;amp;amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'&amp;amp;amp;amp;amp;amp;amp;gt;&amp;amp;amp;amp;amp;amp;amp;lt;img src='http://d1.openx.org/avw.php?zoneid=73714&amp;amp;amp;amp;amp;amp;amp;amp;amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;amp;amp;amp;amp;amp;amp;amp;amp;n=ad4a075e' border='0' alt='' /&amp;amp;amp;amp;amp;amp;amp;gt;&amp;amp;amp;amp;amp;amp;amp;lt;/a&amp;amp;amp;amp;amp;amp;amp;gt;</iframe> </div>
+						<div id="content" class="norrow">
 				
 <div class="main">
 <h2 style="font-size: 5px">
@@ -84,7 +85,7 @@
     	</form> 
 	</div>
 </div> 
-			<div align="left"><img width="129" src="/files/uploaded_photos/logo_icons2_129.gif" alt="logo_icons2_129" height="26" title="logo_icons2_129"> <a target="_blank" href="http://www.facebook.com/pages/Worldwide/HEEB-Magazine/21107359424"><img border="0" width="28" src="/img/icons/facebook.png" alt="Facebook" height="28" title="Facebook"></a> <a target="_blank" href="http://www.myspace.com/heebmag"><img border="0" src="/img/icons/myspace.png" alt="MySpace" title="MySpace"></a> <a target="_blank" href="http://www.youtube.com/user/heebmagazine"><img border="0" width="28" src="/img/icons/youtube.png" alt="YouTube" height="28" title="YouTube"></a> <a target="_blank" href="http://www.twitter.com/heebmagazine"><img border="0" width="28" src="http://www.heebmagazine.com/img/icons/twitter1.png" alt="Twitter" height="28" title="YouTube"></a> <a target="_blank" href="/blog/posts.rss"><img border="0" width="28" src="/img/icons/feedIcon.png" alt="RSS Feed" height="28" title="RSS Feed"></a></div>						<p class="clear"><!----></p>
+			<div align="left"><img width="129" src="/files/uploaded_photos/logo_icons2_129.gif" alt="logo_icons2_129" height="26" title="logo_icons2_129"> <a target="_blank" href="http://www.facebook.com/pages/Worldwide/HEEB-Magazine/21107359424"><img border="0" width="28" src="/img/icons/facebook.png" alt="Facebook" height="28" title="Facebook"></a> <a target="_blank" href="http://www.myspace.com/heebmag"><img border="0" src="/img/icons/myspace.png" alt="MySpace" title="MySpace"></a> <a target="_blank" href="http://www.youtube.com/user/heebmagazine"><img border="0" width="28" src="/img/icons/youtube.png" alt="YouTube" height="28" title="YouTube"></a> <a target="_blank" href="http://www.twitter.com/heebmagazine"><img border="0" width="28" src="http://www.heebmagazine.com/img/icons/twitter1.png" alt="Twitter" height="28" title="YouTube"></a> <a target="_blank" href="/blog/posts.rss"><img border="0" width="28" src="/img/icons/feedIcon.png" alt="RSS Feed" height="28" title="RSS Feed"></a></div>			<div align="center"><!--/* OpenX iFrame Tag v2.8.1 */-->  <!--/*   * This tag has been generated for use on a non-SSL page. If this tag   * is to be placed on an SSL page, change the   *   'http://d1.openx.org/...'   * to   *   'https://d1.openx.org/...'   *   * The backup image section of this tag has been generated for use on a   * non-SSL page. If this tag is to be placed on an SSL page, change the   *   'http://d1.openx.org/...'   * to   *   'https://d1.openx.org/...'   *   * If iFrames are not supported by the viewer's browser, then this   * tag only shows image banners. There is no width or height in these   * banners, so if you want these tags to allocate space for the ad   * before it shows, you will need to add this information to the <img>   * tag.   */-->  </div><iframe src="http://d1.openx.org/afr.php?zoneid=68605&amp;target=_blank&amp;cb=INSERT_RANDOM_NUMBER_HERE" id="aa98d244" name="aa98d244" framespacing="0" frameborder="no" height="250" scrolling="no" width="300">&amp;amp;amp;amp;amp;amp;amp;lt;a href='http://d1.openx.org/ck.php?n=a8a643c0&amp;amp;amp;amp;amp;amp;amp;amp;amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'&amp;amp;amp;amp;amp;amp;amp;gt;&amp;amp;amp;amp;amp;amp;amp;lt;img src='http://d1.openx.org/avw.php?zoneid=68605&amp;amp;amp;amp;amp;amp;amp;amp;amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;amp;amp;amp;amp;amp;amp;amp;amp;n=a8a643c0' border='0' alt='' /&amp;amp;amp;amp;amp;amp;amp;gt;&amp;amp;amp;amp;amp;amp;amp;lt;/a&amp;amp;amp;amp;amp;amp;amp;gt;</iframe> 			<div style="text-align: center"><a href="/shop"><img src="/files/uploaded_photos/merch_300.gif" alt="merch_300" title="merch_300"></a></div>						<p class="clear"><!----></p>
 				</div>
 			
 				<p class="clear"><!----></p>
@@ -96,6 +97,22 @@
 			<a href="http://www.heebmagazine.com/pages/privacy">privacy policy</a>		 	|
 			<a href="http://www.heebmagazine.com/pages/terms">terms &amp; conditions</a>		<div class="clear"><!----></div>
 	</div>
+<!-- Start of StatCounter Code -->
+<script type="text/javascript">
+var sc_project=4929652; 
+var sc_invisible=1; 
+var sc_partition=57; 
+var sc_click_stat=1; 
+var sc_security="958148bf"; 
+</script>
+
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><div
+class="statcounter"><a title="wordpress analytics"
+href="http://www.statcounter.com/wordpress.com/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/4929652/0/958148bf/1/"
+alt="wordpress analytics" ></a></div></noscript>
+<!-- End of StatCounter Code -->
 
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 	<script type="text/javascript">
