--- a/f/fa/fan/fanbridge.com.html
+++ b/f/fa/fan/fanbridge.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fanbridge.com privacy policy that was archived on 2009-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090623040207id_/http%3A//www.fanbridge.com/learn/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fanbridge.com privacy policy that was archived on 2009-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090930195921id_/http%3A//www.fanbridge.com/learn/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>FanBridge.com - Free Email and Mobile Fan List Management for Bands</title>
 
@@ -9,13 +9,12 @@
 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link href="/learn/css/fb.css" rel="stylesheet" type="text/css">	
-
-<script type="text/javascript" src="http://cdn.fanbridge.com/js/prototype.1.5.js"></script>
-<script type="text/javascript" src="http://cdn.fanbridge.com/js/scriptaculous.js?load=effects"></script>
-<script type="text/javascript" src="http://cdn.fanbridge.com/js/lightbox.js"></script>
+<script type="text/javascript" src="http://static.fanbridge.com/js/prototype.1.5.js"></script>
+<script type="text/javascript" src="http://static.fanbridge.com/js/scriptaculous.js?load=effects"></script>
+<script type="text/javascript" src="http://static.fanbridge.com/js/lightbox.js"></script>
 <link rel="stylesheet" href="/css/lightbox2.css" type="text/css" media="screen">
-
-</head><body>
+</head>
+<body>
 
 <div id="beacon"><img style="border: 0pt none ; margin: 0pt; padding: 0pt; display: block; height: 0pt; width: 0pt;" alt="" src="/images/spaceout.gif" border="0" height="0" width="0"></div>
 
@@ -134,5 +133,8 @@ _udn="none";
 _ulink="1";
 urchinTracker();
 </script>
+
+<img src="http://ace-lb.advertising.com/site=723709/mnum=1516/bins=1/rich=0/logs=0/betr=sslb=1|lbclick=426" height="1" width="1" alt="">
+
 
 </body></html>
