--- a/c/ca/car/carbonmade.com.html
+++ b/c/ca/car/carbonmade.com.html
@@ -1,63 +1,81 @@
-<!--The following is the downloaded HTML source of the carbonmade.com privacy policy that was archived on 2009-04-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090418235040id_/http%3A//www.carbonmade.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the carbonmade.com privacy policy that was archived on 2009-10-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091001061610id_/http%3A//www.carbonmade.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<title>Privacy Policy : Carbonmade</title>
-	<meta name="description" content="Carbonmade helps you build and manage an online portfolio website. Use Carbonmade to show off your design, illustration, art, or any other type of creative work.">
-	<meta name="keywords" content="online portfolio, portfolios, design, photography, illustration, industrial design, web design, interior design, architecture, graphic design, artist, illustrator, photographer, art, motion design">
-	<link rel="stylesheet" href="/css/base.css" type="text/css" media="screen">
-	<link rel="alternate" type="application/atom+xml" title="Web Feed" href="http://feeds.feedburner.com/carbonmade">
-	<link rel="shortcut icon" href="http://www.carbonmade.com/img/favicon.ico" type="image/x-icon">
 	
-	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js"></script>
-	<script type="text/javascript" src="/scripts/xf.js?compress=true"></script>
+	
+	<link rel="stylesheet" href="http://s.cmcdn.net/www/2009-08-14/styles/screen.css" type="text/css" media="screen">
+	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/carbonmade">
+	<link rel="shortcut icon" href="http://s.cmcdn.net/www/2009-08-14/img/favicon.ico" type="image/x-icon">
+	
+	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.1.0/prototype.js"></script>
+	<script type="text/javascript" src="http://s.cmcdn.net/www/2009-08-14/scripts/xf.js"></script>
 </head>
-
-
 
 <body>
 	<style type="text/css">body {background:#000;}</style>
 
 <div id="left" style="width:620px;padding:30px;" class="legal">
-	<h1>Carbonmade Privacy Policy</h1>
-	<p class="updated">Last Updated: November 5th, 2008</p>
-	
-	
-<h2>Introduction</h2>
-<p>Your ("You" or "Your") privacy concerns are important to Carbonmade LLC, ("Us", "We" or "Our") and protecting Your privacy and safeguarding Your information is one of Our highest goals. You need to know what information is being collected about You through the Carbonmade website ("Service") and how Your information may be used. To that end, this Privacy Policy explains what information We may collect about You.</p>
+	<h1>Privacy Policy</h1>
 
-<h2>Collection of Information</h2>
-<p>In connection with Your use of the Service, You will provide the majority of the information We collect about You. For example, We may require You to provide certain information, including, but not limited to, Your name, mailing address, e-mail addresses, telephone number and other personally identifiable information. Other information collected by Us may be provided automatically when You access the Service, such as observing Your use of the Service, through the use of cookies (described below) and may be obtained from other sources such as Our business partners.</p>
+	<p class="updated">Effective August 20th, 2009</p>
 
-<h2>No Collection of Children's Personal Information</h2>
-<p>Our Services are intended for general audiences. We do not knowingly collect any personal information from children under the age of 13. Our Services attempt to block such users from providing personal information. We reserve the right to delete any information We believe to be in violation of this Privacy Policy.</p>
+	<h2>1. Introduction</h2>
 
-<h2>Use of Information</h2>
-<p>The information We collect enables Us to refine and offer better services to You. We may share the information We collect about You with Our affiliates. An affiliate is a company that We own, control or one that is under common control with Us or Our parent company.</p>
+	<p>Your (“You” or “Your”) privacy concerns are important to Carbonmade LLC (“Us”, “We” or “Our”), and protecting Your privacy and safeguarding Your information is one of Our highest goals.  You need to know what information is being collected about You through Our website (“Service”) and how Your information may be used.  To that end, this Privacy Policy explains what information We may collect about You.</p>
 
-<h2>Cookies</h2>
-<p>When You visit the Service, We may place a text file called a "cookie" in the browser directory of Your computer's hard drive. A cookie is a small piece of information that a web-service can store on Your web browser and later retrieve. A cookie enables the Service to recognize You as a prior user, provides the Service with information regarding Your prior use and assists Us in determining what portions of the Service are most appropriate for You. Your Web browser may provide You with the ability to not accept cookies. However, in order to take full advantage of the Service, We recommend that You accept cookies from the Service.
+	<h2>2. Collection of Information</h2>
 
-</p><h2>Disclosure</h2>
-<p>We do not sell, license, lease or otherwise disclose Your information to any other parties; except that We may disclose Your information when We believe, in good faith, that disclosure is reasonably necessary to comply with laws, law enforcement or court orders, or to protect the rights, property or safety of another person, including Our own property or rights.</p>
+	<p>In connection with Your use of the Service, You will provide the majority of the information We collect about You. For example, We may require You to provide certain information, including, but not limited to, Your name, mailing address, e-mail addresses, telephone number and other personally identifiable information.  Other information collected by Us may be provided automatically when You access the Service, such as observing Your use of the Service, through the use of cookies (described below), and may be obtained from other sources such as Our business partners.  We do not require you provide personal information to visit our Web site; however, You may choose to provide Us with personal information through an email message, form, survey, registration process, etc. This information is used only to fulfill the stated purpose of Your communication, participation or used certain aspects of the Service.</p>
 
-<h2>No Liability</h2>
-<p>We have made significant investments in protecting and safeguarding Your information. We continuously upgrade and enhance Our security measures as new tools, techniques and technology become available. However, We do not guaranty that any such information will not be misused or disclosed to third parties. We will not have any liability to You for any such misuse or disclosure. If You choose to purchase a product or service offered by another company, any information You share with that company will not be controlled by this Privacy Policy and You do so at Your own risk and We have no liability to You.</p>
+	<h2>3. No Collection of Children's Personal Information</h2>
 
-<h2>Consent</h2>
-<p>By using the Service, You consent to the collection and use of Your information as set forth in this Privacy Policy. If We decide to change this Privacy Policy, which We may do at any time without notice to You, We will post those changes on this page. By continuing to use the Service after We have posted the changes, You agree to and accept such changes. You should periodically check the Service for changes to this Privacy Policy.</p>
+	<p>Our Services are intended for general audiences and commercial use.  We do not knowingly collect any personal information from children under the age of 13.  We reserve the right to delete any information We believe to be in violation of this Privacy Policy.</p>
 
-<h2>Additional Information</h2>
-<p>We welcome Your questions, comments and requests for additional information regarding privacy of the Service. You can contact Us by regular mail at Carbonmade, LLC.</p>
+	<h2>4. Use of Information</h2>
 
-<p>You accept and agree to be bound this Privacy Policy and Terms and Conditions of use.</p>
+	<p>We automatically collect and temporarily store information about Your visit.  The information We collect enables Us to refine and offer better services to You.  We may share the information We collect about You with Our business partners.  The types of information we collect include, but are not limited to:</p>
+
+	<ul style="margin-bottom:20px;">
+    	<li>the date and time of Your visit;</li>
+    	<li>IP addresses;</li>
+    	<li>browser type, operating system, and language;</li>
+    	<li>the pages you visited; and</li>
+    	<li>the address of the Web site from which You came.</li>
+	</ul>
+
+	<h2>5. Cookies</h2>
+
+	<p>When You visit the Service, We may place a text file called a “cookie” on Your computer's hard drive.  A cookie is a small piece of information that a web-service can store on Your web browser and later retrieve.  A cookie enables the Service to recognize You as a prior user, provides the Service with information regarding Your prior use and assists Us in determining what portions of the Service are most appropriate for You.  Your Web browser may provide You with the ability to not accept cookies.  However, in order to take full advantage of the Service, We recommend that You accept cookies from the Service.</p>
+
+	<h2>6. Disclosure</h2>
+
+	<p>We do not sell, license, lease or otherwise disclose Your information to any other parties; except that We may disclose Your information when We believe, in good faith, that disclosure is reasonably necessary to comply with laws, law enforcement or court orders, or to protect the rights, property or safety of another person, including Our own property or rights.</p>
+
+	<h2>7. No Liability</h2>
+
+	<p>We have made significant investments in protecting and safeguarding Your information.  We continuously upgrade and enhance Our security measures as new tools, techniques and technology become available.  However, We do not guaranty that any such information will not be misused or disclosed to third parties. We will not have any liability to You for any such misuse or disclosure.  If You choose to purchase a product or service offered by another company, any information You share with that company will not be controlled by this Privacy Policy, You do so at Your own risk, and We have no liability to You.</p>
+
+	<h2>8. Consent</h2>
+
+	<p>By using the Service, You consent to the collection and use of Your information as set forth in this Privacy Policy.  If We decide to change this Privacy Policy, which We may do at any time without notice to You, We will post those changes on this page. By continuing to use the Service after We have posted the changes, You agree to and accept such changes.  You should periodically check the Service for changes to this Privacy Policy.</p>
+
+	<h2>9. Additional Information</h2>
+
+	<p>We welcome Your questions, comments and requests for additional information regarding privacy of the Service.</p>
+
+	<p>You accept and agree to be bound this <a href="/privacy">Privacy Policy</a> and the <a href="/terms">Terms and Conditions of Use</a>.</p>
 
 </div>
 
 	<script type="text/javascript" src="http://www.google-analytics.com/ga.js"></script>
 	<script type="text/javascript">
-		var pageTracker = _gat._getTracker("UA-99636-6");
-		pageTracker._initData();
+		var pageTracker = _gat._getTracker("UA-99636-6");	
+
+     	pageTracker._setCampNameKey("campaign");
+		pageTracker._setCampSourceKey("source");
+
 		pageTracker._trackPageview();
 	</script>
 
